#ifndef MOVE_STATUS_H
#define MOVE_STATUS_H

enum class MoveStatus {
    DONE,
    ILLEGAL_MOVE,
    LEAVE_PLAYER_IN_CHEK
};

#endif